--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Dependencies
         run: |
           npm install
-          npm run build -- --output-path=docs --base-href=/<repository-name>/
+          npm run build -- --output-path=docs --base-href=/CM-TextEditor/
           # Replace <repository-name> with your actual repository name
 
       - name: Upload artifact
